Configurando registro de blocos, texturas, modelos, lang, add na aba criativo. Adicionado: Bloco de Braunita Bloco de Azuronita Bloco de Azuronita Bruta

--- a/src/main/resources/assets/braunverse/lang/pt_br.json
+++ b/src/main/resources/assets/braunverse/lang/pt_br.json
@@ -1,5 +1,9 @@
 {
   "item.braunverse.braunite": "Braunita",
   "item.braunverse.raw_azuronite": "Azuronita Bruta",
-  "item.braunverse.azuronite_ingot": "Barra de Azuronita"
+  "item.braunverse.azuronite_ingot": "Barra de Azuronita",
+
+  "block.braunverse.braunite_block": "Bloco de Braunita",
+  "block.braunverse.raw_azuronite_block": "Bloco de Azuronita Bruta",
+  "block.braunverse.azuronite_block": "Bloco de Azuronita"
 }
