--- a/src/main/resources/assets/braunverse/lang/en_us.json
+++ b/src/main/resources/assets/braunverse/lang/en_us.json
@@ -1,5 +1,9 @@
 {
   "item.braunverse.braunite": "Braunite",
   "item.braunverse.raw_azuronite": "Raw Azuronite",
-  "item.braunverse.azuronite_ingot": "Azuronite Ingot"
+  "item.braunverse.azuronite_ingot": "Azuronite Ingot",
+
+  "block.braunverse.braunite_block": "Block of Braunite",
+  "block.braunverse.raw_azuronite_block": "Block of Raw Azuronite",
+  "block.braunverse.azuronite_block": "Block of Azuronite"
 }
