Configurando registro de aba no criativo, adicionado duas abas: Braunite Items Azuronite Items
Corrigido valores de strenght nos blocos braunite_block, raw_azuronite_block, azuronite_block

--- a/src/main/resources/assets/braunverse/lang/en_us.json
+++ b/src/main/resources/assets/braunverse/lang/en_us.json
@@ -5,5 +5,8 @@
 
   "block.braunverse.braunite_block": "Block of Braunite",
   "block.braunverse.raw_azuronite_block": "Block of Raw Azuronite",
-  "block.braunverse.azuronite_block": "Block of Azuronite"
+  "block.braunverse.azuronite_block": "Block of Azuronite",
+
+  "creativetab.braunverse.braunite_items": "Braunite Items",
+  "creativetab.braunverse.azuronite_items": "Azuronite Items"
 }
