Adicionando receitas ao jogo Foram adicionados 11 receitas ao jogo

--- a/src/main/resources/assets/braunverse/lang/en_us.json
+++ b/src/main/resources/assets/braunverse/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.braunverse.braunite": "Braunite",
   "item.braunverse.raw_azuronite": "Raw Azuronite",
   "item.braunverse.azuronite_ingot": "Azuronite Ingot",
+  "item.braunverse.azuronite_nugget": "Azuronite Nugget",
 
   "block.braunverse.braunite_block": "Block of Braunite",
   "block.braunverse.raw_azuronite_block": "Block of Raw Azuronite",
