Add Loot Table e Blocos Foi adicionado Loot_table que configura o drop dos blocos e adicionado 5 minérios: braunite ore deepslate braunite ore nether braunie ore azuronite ore deepslate azuronite ore
nether braunite pode dropar de 1 a 2 braunites
deepslate azuronite pode dropar de 1 a 2 raw azuronite
os outros dropam apenas 1

--- a/src/main/resources/assets/braunverse/lang/en_us.json
+++ b/src/main/resources/assets/braunverse/lang/en_us.json
@@ -4,7 +4,12 @@
   "item.braunverse.azuronite_ingot": "Azuronite Ingot",
   "item.braunverse.azuronite_nugget": "Azuronite Nugget",
 
+  "block.braunverse.braunite_ore": "Braunite Ore",
+  "block.braunverse.deepslate_braunite_ore": "Deepslate Braunite Ore",
+  "block.braunverse.nether_braunite_ore": "Nether Braunite Ore",
   "block.braunverse.braunite_block": "Block of Braunite",
+  "block.braunverse.azuronite_ore": "Azuronite Ore",
+  "block.braunverse.deepslate_azuronite_ore": "Deepslate Azuronite Ore",
   "block.braunverse.raw_azuronite_block": "Block of Raw Azuronite",
   "block.braunverse.azuronite_block": "Block of Azuronite",
 
