--- a/src/main/resources/assets/braunverse/lang/pt_br.json
+++ b/src/main/resources/assets/braunverse/lang/pt_br.json
@@ -4,7 +4,12 @@
   "item.braunverse.azuronite_ingot": "Barra de Azuronita",
   "item.braunverse.azuronite_nugget": "Pepita de Azuronita",
 
+  "block.braunverse.braunite_ore": "Minério de Braunita",
+  "block.braunverse.deepslate_braunite_ore": "Minério de Braunita em Ardósia",
+  "block.braunverse.nether_braunite_ore": "Minério de Braunita do Nether",
   "block.braunverse.braunite_block": "Bloco de Braunita",
+  "block.braunverse.azuronite_ore": "Minério de Azuronita",
+  "block.braunverse.deepslate_azuronite_ore": "Minério de Azuronita em Ardósia",
   "block.braunverse.raw_azuronite_block": "Bloco de Azuronita Bruta",
   "block.braunverse.azuronite_block": "Bloco de Azuronita",
 
