Add Braunite Wand Adicionado um novo item estilo chiel (muda o o bloco em que tocar), vai ser usado no futuro pra transformar um bloco de braunite em um outro, usado para fazer um portal. Receita: braunita, barra de azuronita(tbm adicionado, feito com dois lingotes de azuronita) e um diamante, em formato na diagonal nessa ordem.

--- a/src/main/resources/assets/braunverse/lang/pt_br.json
+++ b/src/main/resources/assets/braunverse/lang/pt_br.json
@@ -1,8 +1,10 @@
 {
   "item.braunverse.braunite": "Braunita",
+  "item.braunverse.braunite_wand": "Varinha de Braunita",
   "item.braunverse.raw_azuronite": "Azuronita Bruta",
-  "item.braunverse.azuronite_ingot": "Barra de Azuronita",
+  "item.braunverse.azuronite_ingot": "Lingote de Azuronita",
   "item.braunverse.azuronite_nugget": "Pepita de Azuronita",
+  "item.braunverse.azuronite_stick": "Barra de Azuronita",
 
   "block.braunverse.braunite_ore": "Minério de Braunita",
   "block.braunverse.deepslate_braunite_ore": "Minério de Braunita em Ardósia",
