--- a/src/main/resources/assets/braunverse/lang/en_us.json
+++ b/src/main/resources/assets/braunverse/lang/en_us.json
@@ -1,8 +1,10 @@
 {
   "item.braunverse.braunite": "Braunite",
+  "item.braunverse.braunite_wand": "Braunite Wand",
   "item.braunverse.raw_azuronite": "Raw Azuronite",
   "item.braunverse.azuronite_ingot": "Azuronite Ingot",
   "item.braunverse.azuronite_nugget": "Azuronite Nugget",
+  "item.braunverse.azuronite_stick": "Azuronite Stick",
 
   "block.braunverse.braunite_ore": "Braunite Ore",
   "block.braunverse.deepslate_braunite_ore": "Deepslate Braunite Ore",
