Add New Block and Animation Adicionei animação para a braunite wand e também um bloco novo ancient braunite block, que é feito apenas com a transformação do braunite bock com a varinha, tendo propriedades da bedrock, podendo ser convertido de volta

--- a/src/main/resources/assets/braunverse/lang/en_us.json
+++ b/src/main/resources/assets/braunverse/lang/en_us.json
@@ -10,6 +10,7 @@
   "block.braunverse.deepslate_braunite_ore": "Deepslate Braunite Ore",
   "block.braunverse.nether_braunite_ore": "Nether Braunite Ore",
   "block.braunverse.braunite_block": "Block of Braunite",
+  "block.braunverse.ancient_braunite_block": "Ancient Braunite Block",
   "block.braunverse.azuronite_ore": "Azuronite Ore",
   "block.braunverse.deepslate_azuronite_ore": "Deepslate Azuronite Ore",
   "block.braunverse.raw_azuronite_block": "Block of Raw Azuronite",
