--- a/src/main/resources/assets/braunverse/lang/pt_br.json
+++ b/src/main/resources/assets/braunverse/lang/pt_br.json
@@ -10,6 +10,7 @@
   "block.braunverse.deepslate_braunite_ore": "Minério de Braunita em Ardósia",
   "block.braunverse.nether_braunite_ore": "Minério de Braunita do Nether",
   "block.braunverse.braunite_block": "Bloco de Braunita",
+  "block.braunverse.ancient_braunite_block": "Bloco de Braunita Ancestral",
   "block.braunverse.azuronite_ore": "Minério de Azuronita",
   "block.braunverse.deepslate_azuronite_ore": "Minério de Azuronita em Ardósia",
   "block.braunverse.raw_azuronite_block": "Bloco de Azuronita Bruta",
